# msg

./: .gitignore  CMakeLists.txt  CMakePresets.json
client/: client.py
client/rnxmsg/: pom.xml
client/rnxmsg/src/main/java/: module-info.java
client/rnxmsg/src/main/java/com/rnxmsg/: App.java  Chat.java  ChatMessage.java  EventHandlerDispatcher.java  GroupChat.java  MessageReceiver.java  MessageSender.java  NetworkClient.java  PrimaryController.java  PrivateChat.java  ResponseWaiter.java  SecondaryController.java  User.java
client/rnxmsg/src/main/java/com/rnxmsg/controlers/: CreateGroupChatController.java  LoginController.java  MainController.java
client/rnxmsg/src/main/java/com/rnxmsg/serverEventHandlers/: CreateChatHandler.java  DefaultHendler.java  DeleteMessageHandler.java  GetMessagesHandler.java  GetUserChats.java  LoginHandler.java  NewMessageHandler.java  RegistrationHandler.java  SearchUsersHandler.java  ServerEventHandler.java
client/rnxmsg/src/main/resources/com/rnxmsg/: create_group_chat.fxml  login.fxml  mainwindow.fxml  primary.fxml  secondary.fxml
client/rnxmsg/src/main/resources/com/rnxmsg/styles/: app.css
server/: CMakeLists.txt
server/include/: DatabaseManage.hpp  MessageHandler.hpp  MessageHandlerFactory.hpp  MessageProcessor.hpp  MessageSender.hpp  Server.hpp  Session.hpp
server/source/: DatabaseManage.cpp  Server.cpp  Session.cpp  main.cpp
